JBIDE-20296 Appending server URL add https:// prefix all the time